# esp32s3-swd-spi-poc

components/esp_swd_spi/: CMakeLists.txt
components/esp_swd_spi/config/: DAP_config.h
components/esp_swd_spi/include/: gpio_common.h  gpio_op.h
components/esp_swd_spi/source/: SW_DP.c  dap_utility.c  spi_op.c  spi_switch.c  swd_host.c
main/: CMakeLists.txt  poc_main.cpp  swd_spi_raw.c  swd_spi_raw.h
